# pavona

./: .bazelrc  CLA-Corporate  CLA-Individual  MODULE.bazel  SUMMARY.md  book.toml  compile_flags.txt  pyproject.toml  python-requirements-pyuvm.txt  python-requirements.txt
.github/actions/prepare-env/: action.yml
.github/workflows/: bitstream.yml  ci.yml  dv-multitop.yml  merge-group.yml
bench/: analyze_stats.py  collect_stats.sh
bench/acc/: analyze_stats.py  collect_stats.sh
ci/scripts/: check-vendoring.sh  run-english-breakfast-verilator-tests.sh
doc/: BUILD.bazel  glossary.md
doc/contributing/hw/: development_stages.md  vendor.md
doc/contributing/style_guides/: c_cpp_coding_style.md
doc/contributing/sw/: README.md  acc_sw.md  device_interface_functions.md
doc/getting_started/: README.md  build_sw.md  intro_hardware.md  intro_software.md
doc/security/cryptolib/: cryptolib_api.md  security.md
hw/: README.md
hw/dv/: all_sim_cfgs.hjson
hw/dv/py/: APPLICATION_NOTE_pyuvm_dv_master_release_0_1.md  Application_Note-Addendum.md  RELEASE_NOTE_pyuvm_dv_master_release_0_1.md
hw/formal/: README.md
hw/ip/acc/: README.md  acc.core
hw/ip/otbn/: README.md
hw/ip/otp_macro/: otp_macro.core
hw/ip/pattgen/: README.md
hw/ip/prim/: README.md
hw/ip_templates/otp_ctrl/: otp_ctrl.core.tpl
hw/top/: README.md
hw/top/doc/: create_top.md  top_desc.md
hw/top_darjeeling/: README.md  top_darjeeling.core
hw/top_darjeeling/doc/: datasheet.md
hw/top_darjeeling/dv/: chip_darjeeling_sim_cfg.hjson  chip_rom_tests.hjson  top_darjeeling_sim_cfgs.hjson
hw/top_darjeeling/lint/: top_darjeeling_dv_lint_cfgs.hjson  top_darjeeling_lint_cfgs.hjson
hw/top_darjeeling/templates/: toplevel.sv.tpl
hw/top_earlgrey/: README.md  chip_earlgrey_asic.core  chip_earlgrey_cw310.core  chip_earlgrey_cw310_hyperdebug.core  chip_earlgrey_cw340.core  chip_earlgrey_verilator.core  top_earlgrey.core  top_pkg.core
hw/top_earlgrey/data/: pins_cw341.xdc  placement.xdc  top_earlgrey.hjson
hw/top_earlgrey/doc/: datasheet.md
hw/top_englishbreakfast/: README.md  chip_englishbreakfast_cw305.core  top_englishbreakfast.core  top_pkg.core
quality/: licenses.hjson
rules/: acc.bzl  autogen.bzl  bitstreams.bzl  certificates.bzl  manuf.bzl  otbn.bzl  quality.bzl
rules/opentitan/: qemu.bzl  sim_verilator.bzl  static_library.bzl  transform.bzl
rules/scripts/: bitstreams_workspace.py
signing/: README.md
toolchain/: BUILD
util/: acc_build.py  ace.md  fix_trailing_whitespace.py  gen_doc_hw_summary_table.py  gen_ip_collection.py  gen_system_list.py  mdbook_template.py  topgen.py
util/design/: secded_gen.py
util/doc/: vendor.md
util/dtgen/: README.md  helper.py
util/dvsim/: CfgJson.py  Deploy.py  FlowCfg.py  FormalCfg.py  LintCfg.py  SimCfg.py  dvsim.py  sim_utils.py  style.css  utils.py
util/ipgen/: README.md
util/raclgen/: README.md
util/reggen/: README.md  gen_selfdoc.py
util/site/: build-docs.sh
util/topgen/: README.md  validate.py
(+697 files in other folders)
